flexible tree structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ export(FixedWeightIndex)
 export(Load)
 export(NaRatio)
 export(Ones)
+export(PrintTaps)
 export(Regularize)
 export(SetNames)
 export(Tap)
 import(magrittr)
 importFrom(assertthat,assert_that)
+importFrom(data.tree,Climb)
 importFrom(data.tree,Clone)
 importFrom(data.tree,Do)
 importFrom(data.tree,FromListExplicit)
@@ -25,6 +27,7 @@ importFrom(data.tree,Node)
 importFrom(data.tree,SetEdgeStyle)
 importFrom(data.tree,SetGraphStyle)
 importFrom(data.tree,SetNodeStyle)
+importFrom(data.tree,ToDataFrameTree)
 importFrom(data.tree,Traverse)
 importFrom(data.tree,isNotRoot)
 importFrom(memoise,memoise)
