added macros (e.g. @Today() ) -> that already sounds like it's not going to survive ;-)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(Ones)
 export(Regularize)
 export(SetNames)
 export(Tap)
+export(Today)
 import(magrittr)
 importFrom(assertthat,assert_that)
 importFrom(data.tree,Climb)
