strange error with .errors section

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 S3method(plot,tap)
 S3method(print,context)
+S3method(print,datapsyntax)
 export(Cache)
 export(CheckSyntax)
 export(Combine)
 export(ConstantReturn)
 export(CreateTree)
 export(FixedWeightIndex)
+export(GetSyntaxDefinition)
 export(Load)
 export(NaRatio)
 export(Ones)
