various name refactorings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(Cache)
 export(CheckSyntax)
 export(Combine)
 export(ConstantReturn)
-export(CreateTree)
+export(CreateRawTree)
 export(FixedWeightIndex)
 export(GetSyntaxDefinition)
 export(Load)
@@ -19,6 +19,7 @@ export(Tap)
 export(Today)
 import(magrittr)
 importFrom(assertthat,assert_that)
+importFrom(data.tree,Aggregate)
 importFrom(data.tree,Climb)
 importFrom(data.tree,Clone)
 importFrom(data.tree,Do)
