--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,13 @@
 
 S3method(plot,tap)
 S3method(print,context)
+S3method(print,dataperrorreport)
 S3method(print,datapsyntax)
 export(Cache)
+export(CheckReferences)
 export(CheckSyntax)
 export(Combine)
 export(ConstantReturn)
-export(CreateRawTree)
-export(FixedWeightIndex)
-export(GetSyntaxDefinition)
 export(Load)
 export(NaRatio)
 export(Ones)
@@ -39,6 +38,7 @@ importFrom(memoise,memoise)
 importFrom(memoise,timeout)
 importFrom(timeDate,isWeekday)
 importFrom(timeDate,timeSequence)
+importFrom(utils,capture.output)
 importFrom(xts,xts)
 importFrom(yaml,yaml.load)
 importFrom(zoo,index)
