downstream added test cases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ S3method(plot,tap)
 S3method(print,context)
 S3method(print,dataperrorreport)
 S3method(print,datapsyntax)
+S3method(print,tap)
 export(Cache)
+export(CheckAggregation)
 export(CheckReferences)
 export(CheckSyntax)
 export(Combine)
@@ -17,8 +19,13 @@ export(SetNames)
 export(Tap)
 export(Today)
 import(magrittr)
+importFrom(DiagrammeR,create_edges)
+importFrom(DiagrammeR,create_graph)
+importFrom(DiagrammeR,create_nodes)
+importFrom(DiagrammeR,grViz)
 importFrom(assertthat,assert_that)
 importFrom(data.tree,Aggregate)
+importFrom(data.tree,AreNamesUnique)
 importFrom(data.tree,Climb)
 importFrom(data.tree,Clone)
 importFrom(data.tree,Do)
@@ -31,6 +38,7 @@ importFrom(data.tree,Node)
 importFrom(data.tree,SetEdgeStyle)
 importFrom(data.tree,SetGraphStyle)
 importFrom(data.tree,SetNodeStyle)
+importFrom(data.tree,ToDataFrameNetwork)
 importFrom(data.tree,ToDataFrameTree)
 importFrom(data.tree,Traverse)
 importFrom(data.tree,isNotRoot)
