--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(data.tree,SetNodeStyle)
 importFrom(data.tree,ToDataFrameNetwork)
 importFrom(data.tree,ToDataFrameTree)
 importFrom(data.tree,Traverse)
+importFrom(data.tree,isLeaf)
 importFrom(data.tree,isNotRoot)
 importFrom(memoise,memoise)
 importFrom(memoise,timeout)
