works now ... not beautiful but works

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(CheckReferences)
 export(CheckSyntax)
 export(Combine)
 export(ConstantReturn)
+export(ForgetCache)
 export(Load)
 export(NaRatio)
 export(Ones)
@@ -43,6 +44,7 @@ importFrom(data.tree,ToDataFrameTree)
 importFrom(data.tree,Traverse)
 importFrom(data.tree,isLeaf)
 importFrom(data.tree,isNotRoot)
+importFrom(memoise,forget)
 importFrom(memoise,memoise)
 importFrom(memoise,timeout)
 importFrom(timeDate,isWeekday)
