--- a/inst/extdata/context1.yaml
+++ b/inst/extdata/context1.yaml
@@ -28,16 +28,14 @@ modules:
         more. Return value: an xts object
     Cache:
       type: factory
-      function: Cache
-      arguments:
-        joint: $joint
-        timeout: 3600
+      function:
+        name: Cache
+        arguments:
+          joint: $joint
+          timeout: 3600
     GetSeries:
       type: processor
-      function: magrittr::use_series
-      arguments:
-        a: $inflow
-        b: $series
+      function: .magrittr::use_series(a = $inflow, b = $series)
     NAs: *NaHandling
     Regularize:
         type: processor
