--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(ForgetCache)
 export(Load)
 export(NaRatio)
 export(Ones)
+export(ParseExpression)
 export(Regularize)
 export(SetNames)
 export(Tap)
