--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: datapR
+Package: datap
 Type: Package
 Title: Configurable Data Pipes R reference implementation
 Version: 0.1.0
 Author: Christoph Glur
 Maintainer: Christoph Glur <christoph.glur@ipub.com>
-Description: Define and configure datap contexts in R. Use them for
-  instance to download, pre-process, merge, and QA financial timeseries
-  from various sources.
+Description: A datap context defines data aquisition, pre-processing steps and caching.
+  For instance you can download, backfill, merge, and QA financial timeseries,
+  using your preferred packages and sources.
 VignetteBuilder: knitr
 License: GPL (>= 2)
 LazyData: TRUE
