--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(SetNames)
 export(Tap)
 export(Today)
 import(magrittr)
+import(utils)
 importFrom(DiagrammeR,create_edges)
 importFrom(DiagrammeR,create_graph)
 importFrom(DiagrammeR,create_nodes)
